bug fix: overflow for menu

--- a/css/style.css
+++ b/css/style.css
@@ -236,6 +236,7 @@ h1 small {
   list-style: none;
   text-align: center;
   z-index: 30;
+  overflow: hidden;
   position: relative;
   display: none;
 }
@@ -243,6 +244,7 @@ h1 small {
   font-size: 1em;
   z-index: 100;
   height: 2.5em;
+  overflow: hidden;
   width: 10em;
   background: #f2f2f2;
   border: 1px solid white;
